# advlab

./: Cargo.toml  README.md
crates/advcore/: Cargo.toml
crates/advcore/src/: interface.rs  lib.rs
crates/ifcore/: Cargo.toml
crates/ifcore/src/: interface.rs  lib.rs
crates/walk/: Cargo.toml  README.md
crates/walk/src/: main.rs
crates/walk/src/game/: data.rs  entities.rs  mod.rs  rooms.rs  tests.rs  vocab.rs
