[package]
name = "advcore"
edition.workspace = true
rust-version.workspace = true
#description = ???
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
rustyline = { version = "16.0.0", default-features = false }

[lints]
workspace = true
