[package]
name = "walk"
edition.workspace = true
rust-version.workspace = true
#description = ???
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
advcore = { path = "../advcore" }
phf = { version = "0.11.3", features = ["macros", "unicase"] }
thiserror = "2.0.12"
unicase = "2.8.1"

[lints]
workspace = true
